# cadastre_api

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
cadastre_api/: .env.sample  main.py
cadastre_api/alembic/: env.py
cadastre_api/alembic/versions/: 2024_10_13_2318-092eddacf318_create_users_table.py  2024_10_13_2318-a2bcfed6ffb7_create_queries_table.py
cadastre_api/config/: __init__.py  base.py  config.py  database.py  services.py
cadastre_api/queries/: __init__.py  models.py  routers.py  schemas.py
cadastre_api/users/: __init__.py  models.py  routers.py  schemas.py  services.py
